[package]
name = "rust-nvtrust-confidential"
version = "0.1.0"
edition = "2021"
authors = ["Muhammad-Jibril B. Al-Sharif <https://balqaasem.xyz>"]
description = "Confidential computing module for NVTrust Rust implementation"

[dependencies]
rust-nvtrust = { path = ".." }
rust-nvtrust-attestation = { path = "../attestation" }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
ring = "0.16"

[features]
default = ["std"]
std = []
